<resources>
  <string name="app_name">SharedFarming</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_my_farms">My Farms</string>
  <string name="title_offers">Offers</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_settings">Settings</string>
  <string name="title_more">More</string>
  <string name="fund_opportunities">Fund Opportunities</string>
  <string name="buy_now">Buy Now</string>
  <string name="phone_number">Phone Number*</string>
  <string name="phone_number_required">Phone Number Required</string>
  <string name="email">Email</string>
  <string name="email_required">Email Required</string>
  <string name="password">Password*</string>
  <string name="password_required">Password Required</string>
  <string name="retype_password">Retype Password*</string>
  <string name="retype_password_required">Retype Password Required</string>
  <string name="submit">Submit</string>
  <string name="already_registered_login">Already registered? Login</string>
  <string name="phone_number_or_email">Phone Number or Email</string>
  <string name="phone_number_or_email_required">Phone Number or Email Required</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign Up</string>
  <string name="terms_and_conditions">Terms and Conditions</string>
  <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
  <string name="password_did_not_match">Password Did Not Match</string>
  <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
  <string name="select_unit">Select Unit</string>
  <string name="unit_required">Unit Required</string>
  <string name="breed">Breed</string>
  <string name="gender">Gender</string>
  <string name="average_weight">Average Weight</string>
  <string name="sourced_from">Sourced From</string>
  <string name="location">Location</string>
  <string name="growth_timeline">Growth Timeline</string>
  <string name="profile">Profile</string>
  <string name="blog">Blog</string>
  <string name="about_us">About Us</string>
  <string name="log_in">Log In</string>
  <string name="log_out">Log Out</string>
  <string name="news">News</string>
  <string name="personal_details">Personal Details</string>
  <string name="banking_details">Banking Details</string>
  <string name="nominee_details">Nominee Details</string>
  <string name="contact_details">Contact Details</string>
</resources>