<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

  <fragment
      android:id="@+id/navigation_home"
      android:name="com.pranisheba.sharedfarming.ui.fragment.HomeFragment"
      android:label="@string/title_home"
      tools:layout="@layout/fragment_home" />

  <fragment
      android:id="@+id/navigation_my_farms"
      android:name="com.pranisheba.sharedfarming.ui.fragment.MyFarmsFragment"
      android:label="@string/title_my_farms"
      tools:layout="@layout/fragment_my_farms" />

  <fragment
      android:id="@+id/navigation_offers"
      android:name="com.pranisheba.sharedfarming.ui.fragment.MyFarmsFragment"
      android:label="@string/title_offers"
      tools:layout="@layout/fragment_my_farms" />

  <fragment
      android:id="@+id/navigation_more"
      android:name="com.pranisheba.sharedfarming.ui.fragment.SettingsFragment"
      android:label="@string/title_more"
      tools:layout="@layout/fragment_settings" />
</navigation>