<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.fragment.SettingsFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="8dp">

      <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="16dp"
          android:padding="16dp"
          android:text="@string/profile"
          android:textSize="20sp"
          android:textStyle="bold"
          app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/blogCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="16dp"
          android:padding="16dp"
          android:text="@string/blog"
          android:textSize="20sp"
          android:textStyle="bold"
          app:drawableStartCompat="@drawable/ic_baseline_format_list_bulleted_24" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/newsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="16dp"
          android:padding="16dp"
          android:text="@string/news"
          android:textSize="20sp"
          android:textStyle="bold"
          app:drawableStartCompat="@drawable/ic_baseline_article_24" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/aboutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="16dp"
          android:padding="16dp"
          android:text="@string/about_us"
          android:textSize="20sp"
          android:textStyle="bold"
          app:drawableStartCompat="@drawable/ic_baseline_chat_24" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/logInOutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
          android:id="@+id/logInOutTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="16dp"
          android:padding="16dp"
          android:text="@string/log_in"
          android:textSize="20sp"
          android:textStyle="bold"
          app:drawableStartCompat="@drawable/ic_baseline_login_24" />
      </androidx.cardview.widget.CardView>
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
