<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.home.FundDetailsActivity">

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/fundImageView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:contentDescription="@string/fund_opportunities"
          android:scaleType="centerCrop"
          tools:src="@mipmap/ic_launcher" />

      <TextView
          android:id="@+id/fundNameTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textSize="20sp"
          android:textStyle="bold"
          tools:text="Fund Name" />

      <TextView
          android:id="@+id/fundAmountTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textSize="16sp"
          android:textStyle="bold"
          tools:text="Fund Amount" />

      <TextView
          android:id="@+id/fundDetailsTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:justificationMode="inter_word"
          android:textSize="16sp"
          tools:text="Fund Details Fund Details Fund Details Fund Details Fund Details Fund Details
          Fund Details Fund Details Fund Details Fund Details Fund Details Fund Details Fund Details
           Fund Details Fund Details Fund Details Fund Details Fund Details Fund Details Fund
           Details Fund Details Fund Details Fund Details " />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/unitLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:hint="@string/select_unit"
          app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/unitTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/buyNowButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:onClick="buyNow"
          android:text="@string/buy_now" />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>